# flask-pydantic-example

./: README.md  app.py  pyproject.toml
tests/: test_api.py
