[tool.poetry]
name = "flask-pydantic-example"
version = "0.1.0"
description = "Flask-Pydantic Example"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_pydantic_example"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
Flask-Pydantic = "^0.11.0"


[tool.poetry.group.dev.dependencies]
ipdb = {version = "^0.13.13", optional = true}
black = {version = "^23.3.0", optional = true}
isort = {version = "^5.12.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
